name:                mixpanel-export
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/czyzykowski/mixpanel-export#readme
license:             AllRightsReserved
author:              Łukasz Czyżykowski
maintainer:          lukasz.czyzykowski@gmail.com
copyright:           2017 Łukasz Czyżykowski
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

executable mixpanel-export
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , req
                     , req-conduit
                     , bytestring
                     , aeson
                     , conduit
                     , conduit-extra
                     , conduit-combinators
                     , optparse-applicative
                     , text
                     , unordered-containers
                     , resourcet
                     , ndjson-conduit
                     , bzlib-conduit
                     , http-client

  if flag(dev)
    ghc-options:       -Wall -Werror
  else
    ghc-options:       -O2 -Wall
